# flyrigloader

./: .gitignore  .windsurfrule  ALL_TESTS_PASSING.md  CONSOLIDATION_COMPLETE.md  CONTRACT_TESTS_COMPLETE.md  CONTRIBUTING.md  DESIGN_API_SIMPLIFICATION.md  FINAL_STATUS.md  KEDRO_ANALYSIS.md  KEDRO_CATALOG_CONSOLIDATION_PLAN.md  PR_DESCRIPTION.md  README.md  SEMANTIC_MODEL_GAPS.md  activate_env.sh  environment.yml  pyproject.toml  setup_env.sh
.github/workflows/: quality-assurance.yml  test.yml
blitzy/documentation/: Project Guide.md  Technical Specifications.md
config/: base_config.yaml  hardware_config.yaml  local_config.yaml
docs/: API_COLUMN_CONFIG.md  API_SIMPLIFICATION.md  DIMENSION_HANDLING.md  DISCOVERY_OPTIONS.md  ERROR_RECOVERY_HINTS_EXAMPLES.md  ERROR_TAXONOMY.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  KEDRO_FACTORY_PATTERN.md  KEDRO_SEMANTIC_MODEL.md  LEGACY_CONFIG_ADAPTER_REMOVAL.md  METADATA_MERGE.md  PATTERN_PRECEDENCE.md  PERFORMANCE_SLA.md  PYDANTIC_V2_FIXES.md  RECOVERY_HINTS_PROGRESS.md  SEMANTIC_MODEL.md  SEMANTIC_MODEL_IMPROVEMENTS_SUMMARY.md  SEMANTIC_MODEL_REVIEW_PROGRESS.md  SESSION_SUMMARY_2025-09-30.md  TEST_INFRASTRUCTURE_FIXES.md  api_module_inventory.md  architecture.md  configuration_guide.md  extension_guide.md  kedro_integration.md  migration_guide.md  testing_guidelines.md
docs/audits/: config_validation_refactor.md  path_validation.md
docs/io/: column_configuration.md
docs/reports/: path_validation_audit.md
examples/: schema_validation_example.py
examples/external_project/: analyze_experiment.py  example_config.yaml  migration_example.py  simple_example.py
scripts/benchmarks/: README.md  __init__.py  config.py  conftest.py  run_benchmarks.py  test_benchmark_config.py  test_benchmark_data_loading.py  test_benchmark_discovery.py  test_benchmark_transformations.py  test_file_stats_performance.py  utils.py
scripts/coverage/: analyze-coverage-trends.py  check-performance-slas.py  collect-test-metrics.py  enforce-quality-gates.py  generate-coverage-reports.py  prepare-ci-environment.sh
src/flyrigloader/: __init__.py  _api_registry.py  api.py  exceptions.py
src/flyrigloader/api/: __init__.py  _core.py  _shared.py  columns.py  config.py  configuration.py  dependencies.py  discovery.py  helpers.py  kedro.py  loading.py  manifest.py  parameters.py  paths.py  registry.py  transformation.py
src/flyrigloader/config/: discovery.py  models.py  validators.py  versioning.py  yaml_config.py
src/flyrigloader/config_utils/: __init__.py  config_loader.py  example.py  filter.py  manager.py  models.py
src/flyrigloader/core/: __init__.py  dataframe_tracking.py  factories.py
src/flyrigloader/discovery/: __init__.py  discoverer.py  enumeration.py  experiment.py  files.py  metadata.py  models.py  options.py  patterns.py  providers.py  stats.py
src/flyrigloader/docs/: error_handling.md
src/flyrigloader/io/: __init__.py  column_config.yaml  column_models.py  loaders.py  pickle.py  pydantic_column_config.yaml  pydantic_pickle.py  transformers.py
src/flyrigloader/kedro/: __init__.py  catalog.py  datasets.py  hooks.py
src/flyrigloader/lineage/: __init__.py  minimal.py  tracker.py
src/flyrigloader/migration/: __init__.py  migrators.py  validators.py  versions.py
src/flyrigloader/pipeline/: __init__.py  assembly.py  data_assembly.py  data_pipeline.py
src/flyrigloader/readers/: __init__.py  formats.py  pickle.py
src/flyrigloader/registries/: __init__.py
src/flyrigloader/schema/: __init__.py  operations.py  validator.py
src/flyrigloader/utils/: __init__.py  dataframe.py  files.py  imports.py  manifest.py  paths.py
tests/: __init__.py  conftest.py  test_analyze_experiment_log_level.py  test_api_exports.py  test_api_kedro.py  test_config.py  test_dependency_provider_overrides.py  test_dependency_provider_reload.py  test_discovery_logging_quiet.py  test_file_enumerator.py  test_import_behavior.py  test_lineage_integration.py  test_lineage_registry.py  test_logging_bridge.py  test_manifest_metadata_defaults.py  test_schema_validator.py  utils.py
tests/core/utils/: test_value_utils.py
tests/coverage/: coverage-thresholds.json  pytest.ini  quality-gates.yml  report-config.json  validate-coverage.py
tests/coverage/scripts/: analyze-coverage-trends.py  check-performance-slas.py  collect-test-metrics.py  enforce-quality-gates.py  generate-coverage-reports.py  prepare-ci-environment.sh
tests/coverage/templates/: coverage.json.j2  coverage.xml.j2  index.html.j2  module.html.j2  pyfile.html.j2  style.css.j2
tests/flyrigloader/: KEDRO_CONTRACT_TESTS_README.md  conftest.py  test_api.py  test_api_discovery_options_contract.py  test_api_discovery_options_unit.py  test_api_facade_modules.py  test_api_metadata.py  test_api_real_discovery.py  test_api_submodule_independence.py  test_api_surface.py  test_config_builders.py  test_config_migration.py  test_config_validation_contracts.py  test_dependency_provider_isolation.py  test_io_imports.py  test_kedro_contracts.py  test_kedro_integration.py  test_load_and_validate_config.py  test_logger_imports.py  test_logging.py  test_registry_threading.py  test_validators_paths.py
tests/flyrigloader/benchmarks/: test_benchmark_config.py  test_benchmark_data_loading.py  test_benchmark_discovery.py  test_benchmark_transformations.py
tests/flyrigloader/config/: test_discovery.py  test_extraction_patterns.py  test_logging_formatting.py  test_models.py  test_path_security_config.py  test_project_directories.py  test_yaml_config.py  test_yaml_config_regression.py
tests/flyrigloader/discovery/: test_discovery_options_contract.py  test_discovery_options_unit.py  test_experiment_manifest.py  test_files.py  test_metadata_extractor.py  test_pattern_validation.py  test_patternmatcher_components.py  test_patterns.py  test_stats.py
tests/flyrigloader/integration/: test_api_facade_integration.py  test_configuration_driven_workflows.py  test_cross_module_integration.py  test_end_to_end_workflows.py  test_realistic_experimental_scenarios.py
tests/flyrigloader/io/: test_column_config.py  test_column_models.py  (+5 more)
(+30 files in other folders)
